[workspace]
resolver = "2"
members = [
    "retranscope",
    "retranscope-ebpf",
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
libbpf-rs = { version = "0.24" }
libbpf-cargo = { version = "0.24" }
libbpf-sys = { version = "1.7" }

anyhow = { version = "1", default-features = false }
libc = { version = "0.2.159", default-features = false }

ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false }
