[package]
name = "retranscope-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
retranscope-common = { path = "../retranscope-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "retranscope"
path = "src/main.rs"
