[package]
name = "retranscope"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
retranscope-ebpf = { path = "../retranscope-ebpf" }

anyhow = { workspace = true, default-features = true }
libbpf-rs = { workspace = true }
libc = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[[bin]]
name = "retranscope"
path = "src/main.rs"
